[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nesco"
dynamic = ["version"]
description = "A Python module for Northern Electric Supply Company Limited (NESCO) Smart Meters"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Md Minhazul Haque", email = "mdminhazulhaque@gmail.com"}
]
maintainers = [
    {name = "Md Minhazul Haque", email = "mdminhazulhaque@gmail.com"}
]
keywords = ["nesco", "smart-meter", "electricity", "prepaid", "bangladesh", "utility", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Utilities",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = [
    "requests>=2.28.0",
    "click>=8.0.0",
    "tabulate>=0.9.0",
    "beautifulsoup4>=4.9.0",
]

[project.urls]
Homepage = "https://github.com/mdminhazulhaque/python-nesco"
Repository = "https://github.com/mdminhazulhaque/python-nesco"
"Bug Reports" = "https://github.com/mdminhazulhaque/python-nesco/issues"
"Source Code" = "https://github.com/mdminhazulhaque/python-nesco"

[project.scripts]
nesco-cli = "nesco.main:app"

[tool.setuptools]
packages = ["nesco"]

[tool.setuptools.dynamic]
version = {attr = "nesco.__version__"}
